[OM-61620]: RB40980 ri should retry vm proposed with partial coverage  when is gains coupons